--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
     "typescript": "5.1.6"
   },
   "peerDependencies": {
-    "@typescript-eslint/parser": "^6 || ^7",
-    "eslint": "^7 || ^8",
+    "@typescript-eslint/parser": "^6 || ^7 || ^8",
+    "eslint": "^7 || ^8 || ^9",
     "typescript": "^3 || ^4 || ^5"
   },
   "engines": {
